# ppm

./: .gitignore  README.md  main.py  pyproject.toml  requirments.txt
fastapi-client/: .env  README.md  api_client.py  fastapi_server.py  mcp_client.ipynb  mcp_client.py  rag_boot.py  rag_feature.py  rag_utils.py  smee_client.py  test.http
fastapi-client/chroma_db/: chroma.sqlite3
fastapi-client/docs/: RFP_requirements.md
fastapi-client/github_api_test/: README.md  github_pr_comment.http
fastmcp-server/: README.md  mcp_server.ipynb  mcp_server.py
fastmcp-server/chroma_db/: chroma.sqlite3
fastmcp-server/docs/: RFP_requirements.md
fastmcp-server/prompt_by_models/: qwen3-4b.txt
